--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- JavaScript -->
-    <script src="interacao.js" defer></script>
+    <script src="public/interacao.js" defer></script>
     <!-- TypeScript -->
-    <script src="../dist/script.js" defer></script>
+    <script src="dist/script.js" defer></script>
     <!-- CSS3 -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Jadson & Amanda</title>
