Adicionando imgs no html.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="logotipo">
                 <span class="logo">
                     <span>
-                        <img src="../img/logotipo.png" alt="Logo do Casamento">
+                        <img src="img/logotipo.png" alt="Logo do Casamento">
                     </span>
                 </span>
                 <span class="open-menu"></span>
@@ -51,22 +51,22 @@
             <section class="box-home">
                 <ul class="box-imgs">
                     <li class="img-home">
-                        <img class="img" src="../img/img1.png" alt="Foto dos noivos">
+                        <img class="img" src="img/img1.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
                         <div class="img-circle"></div>
                     </li>
                     <li class="img-home">
-                        <img class="img" src="../img/img2.png" alt="Foto dos noivos">
+                        <img class="img" src="img/img2.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
                         <div class="img-circle"></div>
                     </li>
                     <li class="img-home">
-                        <img class="img" src="../img/img3.png" alt="Foto dos noivos">
+                        <img class="img" src="img/img3.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
-                        <img class="img" src="../img/img1.png" alt="Foto dos noivos">
+                        <img class="img" src="img/img1.png" alt="Foto dos noivos">
                     </li>
                 </ul>
             </section>
@@ -119,16 +119,16 @@
         <section id="preferencias">
             <ul class="box-pref">
                 <li class="img-pref">
-                    <img class="img" src="../img/img1.png" alt="">
+                    <img class="img" src="img/img1.png" alt="">
                 </li>
                 <li class="img-pref">
                     <div class="img-circle"></div>
                 </li>
                 <li class="img-pref">
-                    <img class="img" src="../img/img2.png" alt="">
+                    <img class="img" src="img/img2.png" alt="">
                 </li>
                 <li class="img-pref">
-                    <img class="img" src="../img/img3.png" alt="">
+                    <img class="img" src="img/img3.png" alt="">
                 </li>
             </ul>
             <section class="pref">
@@ -157,7 +157,7 @@
             <section class="box-padrinho">
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="../img/img1.png" alt="Planejamento">
+                        <img src="img/img1.png" alt="Planejamento">
                     </span>
                     <h3 class="title">Padrinhos</h3>
                     <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo tellus,
@@ -167,7 +167,7 @@
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="../img/img2.png" alt="Festa de casamento">
+                        <img src="img/img2.png" alt="Festa de casamento">
                     </span>
                     <h3 class="title">Pajems</h3>
                     <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo tellus,
@@ -177,7 +177,7 @@
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="../img/img3.png" alt="Fotografia">
+                        <img src="img/img3.png" alt="Fotografia">
                     </span>
                     <h3 class="title">Daminhas</h3>
                     <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo tellus,
@@ -193,7 +193,7 @@
         <section id="festa">
             <ul class="box-festa">
                 <li class="imgs-festa">
-                    <img src="../img/img1.png" alt="">
+                    <img src="img/img1.png" alt="">
                 </li>
                 <li class="imgs-festa">
                     <div class="img-circle"></div>
@@ -202,10 +202,10 @@
                     <div class="img-circle"></div>
                 </li>
                 <li class="imgs-festa">
-                    <img src="../img/img2.png" alt="">
+                    <img src="img/img2.png" alt="">
                 </li>
                 <li class="imgs-festa">
-                    <img src="../img/img3.png" alt="">
+                    <img src="img/img3.png" alt="">
                 </li>
             </ul>
             <span class="descricao-festa">
@@ -224,10 +224,10 @@
         <section id="ajuda-noivos">
             <section class="box-ajuda">
                 <span class="ajuda-img">
-                    <img src="../img/img4.png" alt="">
+                    <img src="img/img4.png" alt="">
                 </span>
                 <span class="ajuda-img">
-                    <img src="../img/img5.png" alt="">
+                    <img src="img/img5.png" alt="">
                 </span>
                 <span class="descricao-ajuda">
                     <h3 class="subtitle">Vamos te ajudar para você participara ainda mais!</h3>
@@ -248,7 +248,7 @@
                     <div class="img-circle"></div>
                 </span>
                 <span class="img-agradecimento">
-                    <img src="../img/img1.png" alt="Foto do casal">
+                    <img src="img/img1.png" alt="Foto do casal">
                 </span>
                 <span class="descricao-agradecimento">
                     <h2 class="title">Encontre o vestido e os acessórios perfeitos</h2>
@@ -265,8 +265,8 @@
                     <li class="imgs-agradecimento">
                         <div class="img-circle"></div>
                     </li>
-                    <li class="imgs-agradecimento"><img src="../img/img2.png" alt="Foto do casal"></li>
-                    <li class="imgs-agradecimento"><img src="../img/img3.png" alt="Foto do casal"></li>
+                    <li class="imgs-agradecimento"><img src="img/img2.png" alt="Foto do casal"></li>
+                    <li class="imgs-agradecimento"><img src="img/img3.png" alt="Foto do casal"></li>
                 </ul>
             </section>
         </section>
@@ -285,7 +285,7 @@
                 <li class="img-contact">
                     <div class="img-circle"></div>
                 </li>
-                <li class="img-contact"><img src="../img/img1.png" alt=""></li>
+                <li class="img-contact"><img src="img/img1.png" alt=""></li>
                 <li class="img-contact">
                     <div class="img-circle"></div>
                 </li>
@@ -330,7 +330,7 @@
                     </span>
                 </section>
                 <span class="logo-foot">
-                    <img src="../img/logotipo.png" alt="Logotipo...">
+                    <img src="img/logotipo.png" alt="Logotipo...">
                 </span>
             </section>
         </section>
