Atualizando CSS3, correção de responsividade.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="logotipo">
                 <span class="logo">
                     <span>
-                        <img src="img/logotipo.png" alt="Logo do Casamento">
+                        <img src="img/logotipo-dark.png" alt="Logo do Casamento">
                     </span>
                 </span>
                 <span class="open-menu"></span>
@@ -83,33 +83,33 @@
         </section>
         <section id="noivos">
             <h2 class="title-info">Ei ta, curiosidade!</h2>
-            <section class="box-information">
-                <section class="information">
+            <section class="box-card-info">
+                <section class="card-info">
                     <h3 class="subtitle-info">Paciência dos noivos</h3>
                     <p class="text-info">Nos consideramos pessoas bem pacientes, noivo bem mais paciencia do que a
                         noiva.</p>
                 </section>
-                <section class="information">
+                <section class="card-info">
                     <h3 class="subtitle-info">Gestão econômica dos noivos</h3>
                     <p class="text-info">Nos consideramos bem econômicos. sem gastos desnecessários apenas o necessário,
                         inclusive para nossa vida juntos.</p>
                 </section>
-                <section class="information">
+                <section class="card-info">
                     <h3 class="subtitle-info">Concordância dos noivos</h3>
                     <p class="text-info">Nos somos bem intuitivos na hora de concordar com as decisões que devemos
                         tomar.</p>
                 </section>
-                <section class="information">
+                <section class="card-info">
                     <h3 class="subtitle-info">Humor dos noivos</h3>
                     <p class="text-info">Nos consideramos bem humorados com quem conhecemos, preferimos nos reservar.
                     </p>
                 </section>
-                <section class="information">
+                <section class="card-info">
                     <h3 class="subtitle-info">Organização dos noivos</h3>
                     <p class="text-info">Somos bastante organizados, quanto a isso nunca tivemos problema, noivo
                         perfecionista.</p>
                 </section>
-                <section class="information">
+                <section class="card-info">
                     <h3 class="subtitle-info">Estilo de vida dos noivos</h3>
                     <p class="text-info">Somos um casal caseiro, gostamos da vida tranquila, trabalhar, ir aos cultos.
                         Gostamos de nos prevenir de pessoas indesejadas.</p>
@@ -160,9 +160,10 @@
                         <img src="img/img1.png" alt="Planejamento">
                     </span>
                     <h3 class="title">Padrinhos</h3>
-                    <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo tellus,
+                    <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo
+                        tellus,
                         at
-                        sodales eros laoreet a. Quisque facilisis lorem augue, sit amet
+                        sodales eros laoreet a. Quisque facilisis lorem augue, sit lore amet
                     </p>
                 </section>
                 <section class="card-padrinho">
@@ -280,60 +281,61 @@
             <section data-date="local">
             </section>
         </section>
-        <section id="contacts">
-            <ul class="imgs-contact">
-                <li class="img-contact">
-                    <div class="img-circle"></div>
-                </li>
-                <li class="img-contact"><img src="img/img1.png" alt=""></li>
-                <li class="img-contact">
-                    <div class="img-circle"></div>
-                </li>
-                <li class="img-contact">
-                    <div class="img-circle"></div>
-                </li>
-            </ul>
-            <ul id="contact">
-                <h2 class="title-contact">Contato</h2>
-                <li class="box-contact">
-                    <label class="subtitle">Telefone</label>
-                    <a href="" class="link-contact">(84) 9 9123-4567</a>
-                </li>
-                <li class="box-contact">
-                    <label class="subtitle">E-mail</label>
-                    <a href="mialto:jaera@gmail.com" class="link-contact">casamento@gmail.com</a>
-                </li>
-                <li class="box-contact">
-                    <label class="subtitle">Localização</label>
-                    <a href="" class="link-contact">Rua Essa, N-34, Bairro: Alcaine<br>Cidade: Macaiba-RN, CEP:
-                        59285-396</a>
-                </li>
-                <li class="box-contact">
-                    <label class="subtitle">Deixe sua opinião sobre a pagina!</label>
-                    <textarea class="text-area" name="" id="" cols="40" rows="4"
-                        placeholder="Deixe sua Menssagem"></textarea>
-                </li>
-                <li class="box-contact">
-                    <button class="btn-submit" type="submit">Enviar</button>
-                </li>
-            </ul>
-            <section class="copywhite">
-                <section class="box-termos">
-                    <span class="area-dev">
-                        <p class="text-copy">&COPY;Copywhite 2024</p>
-                        <p class="dev">Desenvolvedor <a class="github" href="">Jadsonh7</a></p>
-                    </span>
-                    <span class="politicas">
-                        <a class="politica" href="">Politica de privacidade</a>
-                        <a class="politica" href="">Politica de imagem</a>
-                        <a class="politica" href="">Termo de autenticação</a>
+        <footer>
+            <section id="contacts">
+                <ul class="imgs-contact">
+                    <li class="img-contact">
+                        <div class="img-circle"></div>
+                    </li>
+                    <li class="img-contact"><img src="img/img1.png" alt=""></li>
+                    <li class="img-contact">
+                        <div class="img-circle"></div>
+                    </li>
+                    <li class="img-contact">
+                        <div class="img-circle"></div>
+                    </li>
+                </ul>
+                <ul id="contact">
+                    <h1 class="title-contact">Contato</h1>
+                    <li class="box-contact">
+                        <label class="title-tel">Telefone:</label>
+                        <a href="" class="link-contact">(84) 9 9123-4567</a>
+                    </li>
+                    <li class="box-contact">
+                        <label class="title-email">E-mail:</label>
+                        <a href="mialto:casamento@gmail.com" class="link-contact">casamento@gmail.com</a>
+                    </li>
+                    <li class="box-contact">
+                        <label class="title-local">Localização</label>
+                        <a href="" class="link-contact">Rua Essa, N-34, Bairro: Alcaine<br>Cidade: Macaiba-RN, CEP:
+                            59285-396</a>
+                    </li>
+                    <li class="box-contact">
+                        <label class="title-textarea">Deixe sua opinião sobre a pagina!</label>
+                        <textarea class="text-area" name="area" id="area" cols="40" rows="4"
+                            placeholder="Deixe sua Menssagem"></textarea>
+                    </li>
+                    <li class="box-contact">
+                        <button class="btn-submit" type="submit">Enviar</button>
+                    </li>
+                </ul>
+                <section class="copywhite">
+                    <section class="box-termos">
+                        <span class="area-dev">
+                            <p class="text-copy">&COPY;Copywhite 2024</p>
+                            <p class="dev">Desenvolvedor <a class="github" href="">Jadsonh7</a></p>
+                        </span>
+                        <span class="politicas">
+                            <a class="politica" href="">Politica de privacidade</a>
+                            <a class="politica" href="">Politica de imagem</a>
+                            <a class="politica" href="">Termo de autenticação</a>
+                        </span>
+                    </section>
+                    <span class="logo-foot">
+                        <img src="img/logotipo-ligth.png" alt="Logotipo...">
                     </span>
                 </section>
-                <span class="logo-foot">
-                    <img src="img/logotipo.png" alt="Logotipo...">
-                </span>
             </section>
-        </section>
         </footer>
 </body>
 
