Corrigido tamanhos das font, cards e footer.

--- a/index.html
+++ b/index.html
@@ -297,27 +297,27 @@
                 </ul>
                 <ul id="contact">
                     <h1 class="title-contact">Contato</h1>
-                    <li class="box-contact">
-                        <label class="title-tel">Telefone:</label>
+                    <li class="box-tel">
+                        <label class="title-tel">Telefone: </label>
                         <a href="" class="link-contact">(84) 9 9123-4567</a>
                     </li>
-                    <li class="box-contact">
-                        <label class="title-email">E-mail:</label>
+                    <li class="box-email">
+                        <label class="title-email">E-mail: </label>
                         <a href="mialto:casamento@gmail.com" class="link-contact">casamento@gmail.com</a>
                     </li>
-                    <li class="box-contact">
-                        <label class="title-local">Localização</label>
-                        <a href="" class="link-contact">Rua Essa, N-34, Bairro: Alcaine<br>Cidade: Macaiba-RN, CEP:
+                    <li class="box-local">
+                        <label class="title-local">Localização: </label>
+                        <a href="" class="link-contact">Rua Espirito Santo, N-8, Bairro: Vilar, Cidade: Macaiba-RN, Cep:
                             59285-396</a>
                     </li>
-                    <li class="box-contact">
-                        <label class="title-textarea">Deixe sua opinião sobre a pagina!</label>
-                        <textarea class="text-area" name="area" id="area" cols="40" rows="4"
-                            placeholder="Deixe sua Menssagem"></textarea>
-                    </li>
-                    <li class="box-contact">
-                        <button class="btn-submit" type="submit">Enviar</button>
-                    </li>
+                    <form class="box-area">
+                        <label for="area" class="title-textarea">Deixe sua opinião sobre a pagina!</label>
+                        <textarea class="text-area" name="area" id="area" cols="28" rows="2"
+                            placeholder="Deixe sua Menssagem..."></textarea>
+                        <span class="box-buttom">
+                            <button class="btn-submit" type="submit">Enviar</button>
+                        </span>
+                    </form>
                 </ul>
                 <section class="copywhite">
                     <section class="box-termos">
