Correção das imgs cards, fonts, espaços vazios.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="logotipo">
                 <span class="logo">
                     <span>
-                        <img src="img/logotipo-dark.png" alt="Logo do Casamento">
+                        <img src="img/logotipo-blur.png" alt="Logo do Casamento">
                     </span>
                 </span>
                 <span class="open-menu"></span>
@@ -231,7 +231,6 @@
                     <img src="img/img5.png" alt="">
                 </span>
                 <span class="descricao-ajuda">
-                    <h3 class="subtitle">Vamos te ajudar para você participara ainda mais!</h3>
                     <h2 class="title">Não deixe os noivos na mão, ajude com uma despesa</h2>
                     <p class="text">É bem simples para fazer essa boa ação! Você só precisa clicar nesse botão abaixo,
                         acredite em mim você, não vai se arrepender por uma boa ação, confie em mim, você vai se sentir
@@ -332,7 +331,7 @@
                         </span>
                     </section>
                     <span class="logo-foot">
-                        <img src="img/logotipo-ligth.png" alt="Logotipo...">
+                        <img src="img/logotipo-blur.png" alt="Logotipo...">
                     </span>
                 </section>
             </section>
