Correção de nomeclatura, inclusão de text.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <section class="menu">
                     <nav class="nav-menu">
                         <ul class="box-links">
+                            <li class="nav-link"><a href="">Home</a></li>
                             <li class="nav-link"><a href="#menu-interativo">Data</a></li>
                             <li class="nav-link"><a href="#menu-interativo">História</a></li>
                             <li class="nav-link"><a href="#noivos">Noivos</a></li>
@@ -72,13 +73,11 @@
             </section>
             <section class="content-home">
                 <h2 class="title-home">Você esperava ser nosso convidado?</h2>
-                <p class="text-home">Que coisa boa te ver lendo essa menssagem! Isso significa que você recebeu nosso
+                <p class="text-home">
+                    Que coisa boa te ver lendo essa menssagem! Isso significa que você recebeu nosso
                     convite. Gostariamos atraves dessa menssagem, te convidar para nossa cerimônia, não tenha dùvida de
                     nossa felicidade em te ver junto conosco nesse momento tão especial, que iremos realizar...
                 </p>
-                <span class="btn-center">
-                    <button class="btn-menu" type="menu">Saiba mais</button>
-                </span>
             </section>
         </section>
         <section id="noivos">
@@ -86,33 +85,44 @@
             <section class="box-card-info">
                 <section class="card-info">
                     <h3 class="subtitle-info">Paciência dos noivos</h3>
-                    <p class="text-info">Nos consideramos pessoas bem pacientes, noivo bem mais paciencia do que a
-                        noiva.</p>
+                    <p class="text-info">
+                        Nos consideramos pessoas bem pacientes, noivo bem mais paciencia do que a
+                        noiva.
+                    </p>
                 </section>
                 <section class="card-info">
                     <h3 class="subtitle-info">Gestão econômica dos noivos</h3>
-                    <p class="text-info">Nos consideramos bem econômicos. sem gastos desnecessários apenas o necessário,
-                        inclusive para nossa vida juntos.</p>
+                    <p class="text-info">
+                        Nos consideramos bem econômicos. sem gastos desnecessários apenas o necessário,
+                        inclusive para nossa vida juntos.
+                    </p>
                 </section>
                 <section class="card-info">
                     <h3 class="subtitle-info">Concordância dos noivos</h3>
-                    <p class="text-info">Nos somos bem intuitivos na hora de concordar com as decisões que devemos
-                        tomar.</p>
+                    <p class="text-info">
+                        Nos somos bem intuitivos na hora de concordar com as decisões que devemos
+                        tomar.
+                    </p>
                 </section>
                 <section class="card-info">
                     <h3 class="subtitle-info">Humor dos noivos</h3>
-                    <p class="text-info">Nos consideramos bem humorados com quem conhecemos, preferimos nos reservar.
+                    <p class="text-info">
+                        Nos consideramos bem humorados com quem conhecemos, preferimos nos reservar.
                     </p>
                 </section>
                 <section class="card-info">
                     <h3 class="subtitle-info">Organização dos noivos</h3>
-                    <p class="text-info">Somos bastante organizados, quanto a isso nunca tivemos problema, noivo
-                        perfecionista.</p>
+                    <p class="text-info">
+                        Somos bastante organizados, quanto a isso nunca tivemos problema, noivo
+                        perfecionista.
+                    </p>
                 </section>
                 <section class="card-info">
                     <h3 class="subtitle-info">Estilo de vida dos noivos</h3>
-                    <p class="text-info">Somos um casal caseiro, gostamos da vida tranquila, trabalhar, ir aos cultos.
-                        Gostamos de nos prevenir de pessoas indesejadas.</p>
+                    <p class="text-info">
+                        Somos um casal caseiro, gostamos da vida tranquila, trabalhar, ir aos cultos.
+                        Gostamos de nos prevenir de pessoas indesejadas.
+                    </p>
                 </section>
             </section>
         </section>
@@ -133,14 +143,12 @@
             </ul>
             <section class="pref">
                 <h2 class="title-pref">Como se conheceram?</h2>
-                <p class="text-pref">A princípio, te afirmamos que essa é uma história bem interesante de se ouvir. Mais
+                <p class="text-pref">
+                    A princípio, te afirmamos que essa é uma história bem interesante de se ouvir. Mais
                     fique tranquilo que nos te contamos um pouco...oooooo curiosidade que não nos deixa esperar, aqui
                     nós falamos um pouco de como aconteceu...
                 </p>
             </section>
-            <span class="btn-center">
-                <button class="btn-menu" type="menu">Saiba mais</button>
-            </span>
             <span class="pref-circle">
                 <div class="img-circle"></div>
             </span>
@@ -148,7 +156,8 @@
         <section id="padrinho-pajem-daminha">
             <section class="padrinhos">
                 <h2 class="title">Porque vocês foram escolhidos?</h2>
-                <p class="text">Nos decidimos vos escolher, por serem pessoas que de alguma forma nos tocaram com
+                <p class="text">
+                    Nos decidimos vos escolher, por serem pessoas que de alguma forma nos tocaram com
                     alegria, sinceridade e quando nos encontramos, não sentimos vontade de ir embora, mas sentimos que
                     tudo se torna mas divertido. E sabemos que vocês, são pessoas que vão nos ajudar quando precisarmos,
                     são pessoas que nos momentos difíceis, iremos procurar uma solução para o problema...
@@ -160,36 +169,33 @@
                         <img src="img/img1.png" alt="Planejamento">
                     </span>
                     <h3 class="title">Padrinhos</h3>
-                    <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo
-                        tellus,
-                        at
-                        sodales eros laoreet a. Quisque facilisis lorem augue, sit lore amet
+                    <p class="text">
+                        Em nossa preferência! Decidimos não chamar padrinhos/madinhas, sabemos que todos são especiais e
+                        temos em nossa mente, que se precisarmos da ajuda de um padrinho/madrinha, vamos ter nossos
+                        familiar ao nosso lado.
                     </p>
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
                         <img src="img/img2.png" alt="Festa de casamento">
                     </span>
-                    <h3 class="title">Pajems</h3>
-                    <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo tellus,
-                        at
-                        sodales eros laoreet a. Quisque facilisis lorem augue, sit amet
+                    <h3 class="title">Pajem</h3>
+                    <p class="text">
+                        Ao nosso pajem, demanda tal honra, suportara essa responsabilidade de levar as alianças dos
+                        noivos e entregalas em segurança, brilhando mais que as luzes do hambiente. Arthur Gabriel!
                     </p>
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
                         <img src="img/img3.png" alt="Fotografia">
                     </span>
-                    <h3 class="title">Daminhas</h3>
-                    <p class="text">Suspendisse vulputate eros in velit fermentum cursus. Nulla fringilla justo tellus,
-                        at
-                        sodales eros laoreet a. Quisque facilisis lorem augue, sit amet
+                    <h3 class="title">Daminha</h3>
+                    <p class="text">
+                        Nos os noivos imcubimos a nossa daminha! Com tal responsabilidade de levar o inlustre buquer da
+                        noiva, para inicio da cerimônia. Entregamos esse objetivo para Alice!
                     </p>
                 </section>
             </section>
-            <span class="btn-center">
-                <button class="btn-menu" type="menu">Saiba mais</button>
-            </span>
         </section>
         <section id="festa">
             <ul class="box-festa">
@@ -218,48 +224,47 @@
                     comida...
                 </p>
             </span>
-            <span class="btn-center">
-                <button class="btn-menu" type="menu">Saiba mais</button>
-            </span>
-        </section>
-        <section id="ajuda-noivos">
-            <section class="box-ajuda">
-                <span class="ajuda-img">
-                    <img src="img/img4.png" alt="">
-                </span>
-                <span class="ajuda-img">
-                    <img src="img/img5.png" alt="">
-                </span>
-                <span class="descricao-ajuda">
-                    <h2 class="title">Não deixe os noivos na mão, ajude com uma despesa</h2>
-                    <p class="text">É bem simples para fazer essa boa ação! Você só precisa clicar nesse botão abaixo,
-                        acredite em mim você, não vai se arrepender por uma boa ação, confie em mim, você vai se sentir
-                        bem melhor, mais confiante...
-                    </p>
-                </span>
-            </section>
-            <span class="btn-center">
-                <button class="btn-menu" type="menu">Saiba mais</button>
-            </span>
         </section>
         <section id="agradecimentos">
             <section class="box-agradecimento">
                 <span class="img-agradecimento">
-                    <div class="img-circle"></div>
+                    <img src="img/img4.png" alt="">
                 </span>
                 <span class="img-agradecimento">
-                    <img src="img/img1.png" alt="Foto do casal">
+                    <img src="img/img5.png" alt="">
                 </span>
                 <span class="descricao-agradecimento">
-                    <h2 class="title">Encontre o vestido e os acessórios perfeitos</h2>
-                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quibusdam illo
-                        distinctio
-                        illum sunt, minus blanditiis, harum corporis soluta ea culpa modi quisquam veritatis obcaecati
-                        hic maiores, ipsum deserunt laborum?
+                    <h2 class="title">Seja inspirado para o seu casamento!</h2>
+                    <p class="text">
+                        Assim como nos, vacê tambem merece ter o casamento dos seus sonhos, e nos um casal jovem,
+                        decidimos aceitar o proposito qeu Deus colou em nossa mão. Ficamos felizes de mostrar para nossa
+                        familia que assim como nos vocês tambem conseguem, não decista do seu desejo.
                     </p>
-                    <span class="btn-center">
-                        <button class="btn-menu" type="menu">Saiba mais</button>
-                    </span>
+                </span>
+            </section>
+        </section>
+        <section id="ajuda-noivos">
+            <section class="box-ajuda">
+                <span class="ajuda-img">
+                    <div class="img-circle"></div>
+                </span>
+                <span class="ajuda-img">
+                    <img src="img/img1.png" alt="Foto do casal">
+                </span>
+                <span class="descricao-ajuda">
+                    <h2 class="title">Ajude a pagar uma despeza dos noivos</h2>
+                    <p class="text">
+                        Como foi visto anteriormente, estamos no processo de construção da nossa casa! É seria de tal
+                        importâcia, sua ajuda nesse momento. Sua colaboração faz muita diferença.
+                        <hr>
+                        Faça sua ecolha agora!
+                        <hr>
+                        <section class="">
+                            <span class=""><a href=""></a>Pix</span>
+                            <span class=""><a href=""></a>Movel</span>
+                            <span class=""><a href=""></a></span>
+                        </section>
+                    </p>
                 </span>
                 <ul class="imgs-agradecimentos">
                     <li class="imgs-agradecimento">
