Efeitos add, menu e opções, responsividade iniciada.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <section class="menu">
                     <nav class="nav-menu">
                         <ul class="box-links">
-                            <li class="nav-link"><a href="">Home</a></li>
-                            <li class="nav-link"><a href="#menu-interativo">Data</a></li>
-                            <li class="nav-link"><a href="#menu-interativo">História</a></li>
+                            <li class="nav-link"><a href="index.html">Home</a></li>
+                            <li class="nav-link"><a href="#">Data</a></li>
+                            <li class="nav-link"><a href="#">História</a></li>
                             <li class="nav-link"><a href="#noivos">Noivos</a></li>
-                            <li class="nav-link"><a href="#menu-interativo">Local</a></li>
-                            <li class="nav-link"><a href="#menu-interativo">Sobre nos</a></li>
+                            <li class="nav-link"><a href="#">Local</a></li>
+                            <li class="nav-link"><a href="#">Sobre nos</a></li>
                             <li class="nav-link"><a href="#contact">Contato</a></li>
                         </ul>
                         <ul class="box-registe">
@@ -258,14 +258,9 @@
                         importâcia, sua ajuda nesse momento. Sua colaboração faz muita diferença.
                         <hr>
                         Faça sua ecolha agora!
-                        <hr>
-                        <section class="">
-                            <span class=""><a href=""></a>Pix</span>
-                            <span class=""><a href=""></a>Movel</span>
-                            <span class=""><a href=""></a></span>
-                        </section>
                     </p>
                 </span>
+                <span></span>
                 <ul class="imgs-agradecimentos">
                     <li class="imgs-agradecimento">
                         <div class="img-circle"></div>
@@ -303,11 +298,11 @@
                     <h1 class="title-contact">Contato</h1>
                     <li class="box-tel">
                         <label class="title-tel">Telefone: </label>
-                        <a href="" class="link-contact">(84) 9 9123-4567</a>
+                        <a href="wa://+5584994123456" class="link-contact">(84) 9 9123-4567</a>
                     </li>
                     <li class="box-email">
                         <label class="title-email">E-mail: </label>
-                        <a href="mialto:casamento@gmail.com" class="link-contact">casamento@gmail.com</a>
+                        <a href="mialto:jadsonzap@gmail.com" class="link-contact">jadson&amanda@gmail.com</a>
                     </li>
                     <li class="box-local">
                         <label class="title-local">Localização: </label>
@@ -327,7 +322,7 @@
                     <section class="box-termos">
                         <span class="area-dev">
                             <p class="text-copy">&COPY;Copywhite 2024</p>
-                            <p class="dev">Desenvolvedor <a class="github" href="">Jadsonh7</a></p>
+                            <p class="dev">Desenvolvedor <a class="github" href="https://github.com/jadsonH7">Jadsonh7</a></p>
                         </span>
                         <span class="politicas">
                             <a class="politica" href="">Politica de privacidade</a>
