--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- JavaScript -->
-    <script src="public/interacao.js" defer></script>
+    <script src="javascript/interacao.js" defer></script>
     <!-- TypeScript -->
-    <script src="dist/script.js" defer></script>
+    <script src="../dist/script.js" defer></script>
     <!-- CSS3 -->
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="./icons/icon 70.png" sizes="180x180">
+    <link rel="icon" href="./icons/icon 70.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="./icons/icon 70.png" type="image/png" sizes="16x16">
+    <link rel="shortcut icon" href="./icons/icon 70.png" type="image/x-icon">
+    <!-- Title -->
     <title>Jadson & Amanda</title>
 </head>
 
@@ -21,7 +27,7 @@
             <section class="logotipo">
                 <span class="logo">
                     <span>
-                        <img src="img/logotipo-blur.png" alt="Logo do Casamento">
+                        <img src="./assets/img/logotipo-blur.png" alt="Logo do Casamento">
                     </span>
                 </span>
                 <span class="open-menu"></span>
@@ -31,11 +37,11 @@
                     <nav class="nav-menu">
                         <ul class="box-links">
                             <li class="nav-link"><a href="index.html">Home</a></li>
-                            <li class="nav-link"><a href="#">Data</a></li>
-                            <li class="nav-link"><a href="#">História</a></li>
-                            <li class="nav-link"><a href="#noivos">Noivos</a></li>
-                            <li class="nav-link"><a href="#">Local</a></li>
-                            <li class="nav-link"><a href="#">Sobre nos</a></li>
+                            <li class="nav-link"><a href="../src/pages/date.html">Data</a></li>
+                            <li class="nav-link"><a href="../src/pages/story.html">História</a></li>
+                            <li class="nav-link"><a href="../src/pages/noivos.html">Noivos</a></li>
+                            <li class="nav-link"><a href="../src/pages/local.html">Local</a></li>
+                            <li class="nav-link"><a href="../src/pages/about.html">Sobre nos</a></li>
                             <li class="nav-link"><a href="#contact">Contato</a></li>
                         </ul>
                         <ul class="box-registe">
@@ -52,22 +58,22 @@
             <section class="box-home">
                 <ul class="box-imgs">
                     <li class="img-home">
-                        <img class="img" src="img/img1.png" alt="Foto dos noivos">
+                        <img class="img" src="./assets/img/img1.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
                         <div class="img-circle"></div>
                     </li>
                     <li class="img-home">
-                        <img class="img" src="img/img2.png" alt="Foto dos noivos">
+                        <img class="img" src="./assets/img/img2.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
                         <div class="img-circle"></div>
                     </li>
                     <li class="img-home">
-                        <img class="img" src="img/img3.png" alt="Foto dos noivos">
+                        <img class="img" src="./assets/img/img3.png" alt="Foto dos noivos">
                     </li>
                     <li class="img-home">
-                        <img class="img" src="img/img1.png" alt="Foto dos noivos">
+                        <img class="img" src="./assets/img/img1.png" alt="Foto dos noivos">
                     </li>
                 </ul>
             </section>
@@ -80,7 +86,7 @@
                 </p>
             </section>
         </section>
-        <section id="noivos">
+        <section id="information">
             <h2 class="title-info">Ei ta, curiosidade!</h2>
             <section class="box-card-info">
                 <section class="card-info">
@@ -129,16 +135,16 @@
         <section id="preferencias">
             <ul class="box-pref">
                 <li class="img-pref">
-                    <img class="img" src="img/img1.png" alt="">
+                    <img class="img" src="./assets/img/img1.png" alt="">
                 </li>
                 <li class="img-pref">
                     <div class="img-circle"></div>
                 </li>
                 <li class="img-pref">
-                    <img class="img" src="img/img2.png" alt="">
+                    <img class="img" src="./assets/img/img2.png" alt="">
                 </li>
                 <li class="img-pref">
-                    <img class="img" src="img/img3.png" alt="">
+                    <img class="img" src="./assets/img/img3.png" alt="">
                 </li>
             </ul>
             <section class="pref">
@@ -166,7 +172,7 @@
             <section class="box-padrinho">
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="img/img1.png" alt="Planejamento">
+                        <img src="./assets/img/img1.png" alt="Planejamento">
                     </span>
                     <h3 class="title">Padrinhos</h3>
                     <p class="text">
@@ -177,7 +183,7 @@
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="img/img2.png" alt="Festa de casamento">
+                        <img src="./assets/img/img2.png" alt="Festa de casamento">
                     </span>
                     <h3 class="title">Pajem</h3>
                     <p class="text">
@@ -187,7 +193,7 @@
                 </section>
                 <section class="card-padrinho">
                     <span class="img-padrinho">
-                        <img src="img/img3.png" alt="Fotografia">
+                        <img src="./assets/img/img3.png" alt="Fotografia">
                     </span>
                     <h3 class="title">Daminha</h3>
                     <p class="text">
@@ -200,19 +206,19 @@
         <section id="festa">
             <ul class="box-festa">
                 <li class="imgs-festa">
-                    <img src="img/img1.png" alt="">
+                    <img src="./assets/img/img1.png" alt="">
                 </li>
                 <li class="imgs-festa">
-                    <div class="img-circle"></div>
+                    <div class="./assets/img-circle"></div>
                 </li>
                 <li class="imgs-festa">
-                    <div class="img-circle"></div>
+                    <div class="./assets/img-circle"></div>
                 </li>
                 <li class="imgs-festa">
-                    <img src="img/img2.png" alt="">
+                    <img src="./assets/img/img2.png" alt="">
                 </li>
                 <li class="imgs-festa">
-                    <img src="img/img3.png" alt="">
+                    <img src="./assets/img/img3.png" alt="">
                 </li>
             </ul>
             <span class="descricao-festa">
@@ -228,10 +234,10 @@
         <section id="agradecimentos">
             <section class="box-agradecimento">
                 <span class="img-agradecimento">
-                    <img src="img/img4.png" alt="">
+                    <img src="./assets/img/img4.png" alt="">
                 </span>
                 <span class="img-agradecimento">
-                    <img src="img/img5.png" alt="">
+                    <img src="./assets/img/img5.png" alt="">
                 </span>
                 <span class="descricao-agradecimento">
                     <h2 class="title">Seja inspirado para o seu casamento!</h2>
@@ -249,35 +255,35 @@
                     <div class="img-circle"></div>
                 </span>
                 <span class="ajuda-img">
-                    <img src="img/img1.png" alt="Foto do casal">
+                    <img src="./assets/img/img1.png" alt="Foto do casal">
                 </span>
-                <span class="descricao-ajuda">
+                <section class="descricao-ajuda">
                     <h2 class="title">Ajude a pagar uma despeza dos noivos</h2>
                     <p class="text">
-                        Como foi visto anteriormente, estamos no processo de construção da nossa casa! É seria de tal
-                        importâcia, sua ajuda nesse momento. Sua colaboração faz muita diferença.
-                        <hr>
-                        Faça sua ecolha agora!
+                        Como foi visto anteriormente, e agora você sabe. Estamos no processo de construção da nossa
+                        casa! É seria de tal
+                        importâcia e grande ajuda, sua colaboração nesse momento, tão especial. Não estipulamos metas e
+                        sim confiança. Nos agradecemos por toda ajuda, faça conforme você sentir no seu coração, você e
+                        nossa
+                        familia.
                     </p>
-                </span>
-                <span></span>
-                <ul class="imgs-agradecimentos">
-                    <li class="imgs-agradecimento">
-                        <div class="img-circle"></div>
+                    <p class="text">Faça sua ecolha agora!</p>
+                    <span class="box-btn-ajuda">
+                        <button class="btn-ajuda">Não, quero ajudar!</button>
+                        <button class="btn-ajuda">Sim, quero ajudar!</button>
+                    </span>
+                </section>
+                <ul class="imgs-ajuda">
+                    <li class="img-ajuda">
+                        <div class="./assets/img-circle"></div>
                     </li>
-                    <li class="imgs-agradecimento"><img src="img/img2.png" alt="Foto do casal"></li>
-                    <li class="imgs-agradecimento"><img src="img/img3.png" alt="Foto do casal"></li>
+                    <li class="img-ajuda">
+                        <img src="./assets/img/img2.png" alt="Foto do casal">
+                    </li>
+                    <li class="img-ajuda">
+                        <img src="./assets/img/img3.png" alt="Foto do casal">
+                    </li>
                 </ul>
-            </section>
-        </section>
-        <section id="menu-interativo">
-            <section data-date="data">
-            </section>
-            <section data-date="story">
-            </section>
-            <section data-date="local">
-            </section>
-            <section data-date="local">
             </section>
         </section>
         <footer>
@@ -286,7 +292,9 @@
                     <li class="img-contact">
                         <div class="img-circle"></div>
                     </li>
-                    <li class="img-contact"><img src="img/img1.png" alt=""></li>
+                    <li class="img-contact">
+                        <img src="./assets/img/img1.png" alt="">
+                    </li>
                     <li class="img-contact">
                         <div class="img-circle"></div>
                     </li>
@@ -302,7 +310,7 @@
                     </li>
                     <li class="box-email">
                         <label class="title-email">E-mail: </label>
-                        <a href="mialto:jadsonzap@gmail.com" class="link-contact">jadson&amanda@gmail.com</a>
+                        <a href="mialto:jadsonzap@gmail.com" class="link-contact">jadson-amanda@gmail.com</a>
                     </li>
                     <li class="box-local">
                         <label class="title-local">Localização: </label>
@@ -322,16 +330,17 @@
                     <section class="box-termos">
                         <span class="area-dev">
                             <p class="text-copy">&COPY;Copywhite 2024</p>
-                            <p class="dev">Desenvolvedor <a class="github" href="https://github.com/jadsonH7">Jadsonh7</a></p>
+                            <p class="dev">Desenvolvedor <a class="github" href="https://github.com/jadsonH7"
+                                    target="_blank">Jadsonh7</a></p>
                         </span>
                         <span class="politicas">
-                            <a class="politica" href="">Politica de privacidade</a>
-                            <a class="politica" href="">Politica de imagem</a>
-                            <a class="politica" href="">Termo de autenticação</a>
+                            <a class="politica" href="#">Politica de privacidade</a>
+                            <a class="politica" href="#">Politica de imagem</a>
+                            <a class="politica" href="#">Termo de autenticação</a>
                         </span>
                     </section>
                     <span class="logo-foot">
-                        <img src="img/logotipo-blur.png" alt="Logotipo...">
+                        <img src="./assets/img/logotipo-blur.png" alt="Logotipo...">
                     </span>
                 </section>
             </section>
